--- a/GUIfun/app/src/main/res/layout/activity_main.xml
+++ b/GUIfun/app/src/main/res/layout/activity_main.xml
@@ -108,7 +108,6 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
@@ -118,5 +117,21 @@
         android:layout_alignParentEnd="true"
         android:textSize="24sp"
         android:textColor="@android:color/black" />
+
+    <Button
+        android:text="PopUpMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/show_pop"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/switch1" />
+
+    <Button
+        android:text="ContexMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/button"
+        android:id="@+id/contex_menu" />
 
 </RelativeLayout>
